# BRIEF_CUDA

./: .gitignore  CMakeLists.txt  MultiTask.py  README.md  deblock.cpp  deblock.py  decompress.py  main.py  requirements.txt
data/: config.json
dependencies/args/: CMakeLists.txt  Doxyfile  README.md  appveyor.yml  args.hxx  meson.build  meson_options.txt  test.cxx
dependencies/args/packaging/: pkgconfig.pc.in
dependencies/tiny-cuda-nn/: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  README.md
dependencies/tiny-cuda-nn/.github/workflows/: main.yml
dependencies/tiny-cuda-nn/benchmarks/image/: CMakeLists.txt  bench_ours.cu  bench_tensorflow.py  tinyexr.cpp
dependencies/tiny-cuda-nn/bindings/torch/: setup.py
dependencies/tiny-cuda-nn/bindings/torch/tinycudann/: __init__.py  bindings.cpp  modules.py
dependencies/tiny-cuda-nn/data/: config_hash.json  config_oneblob.json
dependencies/tiny-cuda-nn/data/images/: LICENSE.txt
dependencies/tiny-cuda-nn/dependencies/cuda-cmake-github-actions/: LICENSE
dependencies/tiny-cuda-nn/dependencies/cuda-cmake-github-actions/scripts/actions/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
dependencies/tiny-cuda-nn/dependencies/cutlass/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  CUDA.cmake  Doxyfile  LICENSE.txt  PUBLICATIONS.md  README.md  bin2hex.cmake  cuBLAS.cmake  cuDNN.cmake
dependencies/tiny-cuda-nn/dependencies/cutlass/cmake/: CTestTestfile.config.cmake  NvidiaCutlassConfig.cmake  NvidiaCutlassPackageConfig.cmake  googletest.cmake  nop.cu  version.h.in
dependencies/tiny-cuda-nn/dependencies/cutlass/docs/: aligned__buffer_8h.html  aligned__buffer_8h_source.html  annotated.html  arch_2mma_8h.html  arch_2mma_8h_source.html  arch_2mma__sm50_8h.html  arch_2mma__sm50_8h_source.html  arch_2mma__sm60_8h.html  arch_2mma__sm60_8h_source.html  arch_2mma__sm61_8h.html  arch_2mma__sm61_8h_source.html  arch_8h.html  arch_8h_source.html  array_8h.html  array_8h_source.html  array__subbyte_8h.html  array__subbyte_8h_source.html  batched__reduction_8h.html  batched__reduction_8h_source.html  batched__reduction__traits_8h.html  batched__reduction__traits_8h_source.html  classcutlass_1_1AlignedArray.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1const__iterator-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1const__iterator.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1const__reference-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1const__reference.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1const__reverse__iterator-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1const__reverse__iterator.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1iterator-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1iterator.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1reference-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1reference.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1reverse__iterator-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01false_01_4_1_1reverse__iterator.html  classcutlass_1_1Array_3_01T_00_01N_00_01true_01_4-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01true_01_4.html  classcutlass_1_1Array_3_01T_00_01N_00_01true_01_4_1_1const__iterator-members.html  classcutlass_1_1Array_3_01T_00_01N_00_01true_01_4_1_1const__iterator.html  (+1995 more)
dependencies/tiny-cuda-nn/dependencies/cutlass/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+169 more)
dependencies/tiny-cuda-nn/dependencies/cutlass/examples/: CMakeLists.txt
dependencies/tiny-cuda-nn/dependencies/cutlass/test/: CMakeLists.txt
dependencies/tiny-cuda-nn/dependencies/cutlass/tools/: CMakeLists.txt
dependencies/tiny-cuda-nn/dependencies/pcg32/: pcg32.h
dependencies/tiny-cuda-nn/dependencies/pybind11_json/: LICENSE  pybind11_json.hpp
dependencies/tiny-cuda-nn/dependencies/stbi/: stbi_wrapper.cpp  stbi_wrapper.h
dependencies/tiny-cuda-nn/include/tiny-cuda-nn/: common.h  common_device.h  cpp_api.h  cuda_graph.h  cutlass_matmul.h  encoding.h  gpu_matrix.h  gpu_memory.h  gpu_memory_json.h  optimizer.h  reduce_sum.h  trainer.h
dependencies/tiny-cuda-nn/include/tiny-cuda-nn/encodings/: composite.h  oneblob.h  spherical_harmonics.h  triangle_wave.h
dependencies/tiny-cuda-nn/include/tiny-cuda-nn/losses/: cross_entropy.h  relative_l2_luminance.h  smape.h  variance_is.h
dependencies/tiny-cuda-nn/include/tiny-cuda-nn/networks/: cutlass_mlp.h  fully_fused_mlp.h
dependencies/tiny-cuda-nn/include/tiny-cuda-nn/optimizers/: average.h  lookahead.h  sgd.h
dependencies/tiny-cuda-nn/samples/: CMakeLists.txt  mlp_learning_an_image.cu  mlp_learning_an_image_pytorch.py  tinyexr_wrapper.cpp  tinyexr_wrapper.h
dependencies/tiny-cuda-nn/scripts/: common.py  gen_sh.py  test_grid_bwdbwd.py  test_random_input.py  test_toch_bindings.py
dependencies/tiny-cuda-nn/src/: CMakeLists.txt  common.cu  common_device.cu  cpp_api.cu  cutlass_mlp.cu  encoding.cu  fully_fused_mlp.cu  loss.cu  network.cu  object.cu  optimizer.cu  reduce_sum.cu
include/: common.h
include/tiny-cuda-nn/: common.h  common_device.h  config.h  gpu_matrix.h  gpu_memory.h  loss.h  matrix_layout.h  multi_stream.h  network.h  network_with_input_encoding.h  object.h  random.h  trainer.h
include/tiny-cuda-nn/encodings/: frequency.h  grid.h  identity.h
include/tiny-cuda-nn/losses/: l1.h  l2.h  mape.h  relative_l1.h  relative_l2.h
include/tiny-cuda-nn/optimizers/: adam.h  batched.h  ema.h  exponential_decay.h  novograd.h  shampoo.h
opt/DivideTask/: default.yaml  hipct.yaml  neuron.yaml  vessel.yaml
opt/MultiTask/: default.yaml
opt/SingleTask/: default.yaml
src/: common.cu  main.cu
utils/: Multiprocess.py  adaptive_blocking.py  logger.py  metrics.py  misc.py  partition.py  tool.py
(+862 files in other folders)
